--- a/main.bib
+++ b/main.bib
@@ -385,16 +385,16 @@
 }
 
 @book{tsai2003introduction,
-  title={An introduction to computational biochemistry},
-  author={Tsai, C Stan},
-  year={2003},
-  publisher={John Wiley \& Sons}
+  title     = {An introduction to computational biochemistry},
+  author    = {Tsai, C Stan},
+  year      = {2003},
+  publisher = {John Wiley \& Sons}
 }
 
 @online{britannica_molecule,
-  author = "{Britannica, T. Editors of Encyclopaedia}",
-  title = "Molecule",
-  url = "https://www.britannica.com/science/molecule",
+  author  = {{Britannica, T. Editors of Encyclopaedia}},
+  title   = {Molecule},
+  url     = {https://www.britannica.com/science/molecule},
   urldate = {2023-05-14}
 }
 
@@ -411,3 +411,19 @@
   url     = {https://mmcif.wwpdb.org/},
   urldate = {2023-05-14}
 } 
+
+@article{mccoy1997hydrophobic,
+  author   = {McCoy, Mark and Stavridi, Elena S. and Waterman, Jennifer L.F. and Wieczorek, Ania M. and Opella, Stanley J. and Halazonetis, Thanos D.},
+  title    = {Hydrophobic side-chain size is a determinant of the three-dimensional structure of the p53 oligomerization domain},
+  journal  = {The EMBO Journal},
+  volume   = {16},
+  number   = {20},
+  pages    = {6230-6236},
+  keywords = {hydrophobic effect, NMR spectroscopy, p53 tumor suppressor, protein design, protein structure},
+  doi      = {https://doi.org/10.1093/emboj/16.20.6230},
+  url      = {https://www.embopress.org/doi/abs/10.1093/emboj/16.20.6230},
+  eprint   = {https://www.embopress.org/doi/pdf/10.1093/emboj/16.20.6230},
+  abstract = {The p53 tumor suppressor oligomerization domain, a dimer of two primary dimers, is an independently folding domain whose subunits consist of a β-strand, a tight turn and an α-helix. To evaluate the effect of hydrophobic side-chains on three-dimensional structure, we substituted residues Phe341 and Leu344 in the α-helix with other hydrophobic amino acids. Substitutions that resulted in residue 341 having a smaller side-chain than residue 344 switched the stoichiometry of the domain from tetrameric to dimeric. The three-dimensional structure of one such dimer was determined by multidimensional NMR spectroscopy. When compared with the primary dimer of the wild-type p53 oligomerization domain, the mutant dimer showed a switch in α-helical packing from anti-parallel to parallel and rotation of the α-helices relative to the β-strands. Hydrophobic side-chain size is therefore an important determinant of a protein fold.},
+  year     = {1997}
+}
+
